css/home.css
body {
  font-family: "Open Sans" !important;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a:hover {
  text-decoration: none !important;
  color: #f8be2a !important;
}

h1 {
  font-size: 4rem !important;
  font-weight: 600 !important;
}

h2 {
  font-size: 2.4rem !important;
}

h3 {
  font-size: 30px !important;
}

h4 {
  font-size: 20px !important;
}

p {
  font-size: 18px !important;
}

header {
  background-image: url("../images/brown-gray-coffee.png");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  width: 100%;
  min-height: 690px;
  position: relative;
}

#logo {
  width: 120px;
}

header::after {
  content: "";
  background-color: rgba(0, 0, 0, 0.59);
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  z-index: 1;
}

nav,
header > section,
footer > div {
  position: relative;
  z-index: 3;
}

.gold-filled-btn {
  border-radius: 5px;
  padding: 10px 20px;
  background-color: #f8be2a !important;
  color: #ffffff;
  border: none;
  outline: none;
  display: inline-block !important;
}

.gold-filled-btn:hover {
  color: #1c1c1c !important;
}

.transparent-btn {
  border-radius: 5px;
  padding: 10px 20px;
  border: 1px solid #f8be2a;
  color: #f8be2a;
  background: transparent;
  outline: none;
}

.transparent-btn:hover {
  color: #ffffff !important;
}

.gold-text {
  color: #f8be2a !important;
}

.light-black {
  background-color: #1c1c1c !important;
}

.deep-black {
  background-color: #000000;
}

.sticky {
  background-color: rgba(0, 0, 0, 0.8) !important;
}

.text-underline {
  font-family: Aclonica !important;
  text-decoration: underline;
}

.margin-top {
  margin-top: 50px;
  min-height: calc(100vh - 78px);
}

.center-text {
  max-width: 600px;
  margin: 0 auto !important;
}

.img-resize {
  width: 24px !important;
  height: 22px !important;
}

.show-nav {
  background-color: #f8be2a !important;
}

.container-fluid {
  padding: 0;
}

.navbar {
  padding: 1.5rem 1rem;
}

.navbar-light .navbar-nav .nav-link {
  color: #fff;
}

.navbar-light .navbar-nav .nav-link:hover {
  color: #f8be2a;
}

.navbar-light .navbar-nav .nav-link.active {
  color: #f8be2a;
}

.top-link {
  margin: 0 20px;
  color: #fff;
}

.top-btn {
  color: #fff !important;
  background-color: #f8be2a !important;
  border-color: #f8be2a;
}

.gridshow {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  grid-gap: 20px;
  width: 100%;
  max-width: 2000px;
  margin: 0 auto;
  margin: 20px 0;
}

.gridimage {
  width: 100%;
  height: auto;
}

.icon {
  width: 100px;
  height: 100px;
}

.footer {
  position: relative;
  background-image: linear-gradient(
      90deg,
      rgba(0, 0, 0, 0.9) 0%,
      rgba(0, 0, 0, 0.9) 50%,
      rgba(0, 0, 0, 0.9) 100%
    ),
    url("../images/about/footer-background.jpg");
  height: auto;
  background-repeat: no-repeat;
  background-size: cover;
  color: #fff;
  min-height: 430px;
  padding-top: 78px;
}

#footer-logo {
  width: 40%;
}

.info img {
  width: 20px;
  margin-right: 20px;
}

.info {
  padding: 10px 0;
}

.footer-top {
  margin-bottom: 20px;
}

footer h3,
.time,
#bottom {
  color: #f8be2a;
}

.social-icon {
  width: 30px;
  margin: 0 10px;
}

@media (max-width: 768px) {
  .navbar-light .navbar-toggler-icon {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28248, 190, 42 %29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
  }

  .navbar-light .navbar-toggler-icon.nav-toggler-alt {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.5%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
  }

  .navbar-light .navbar-nav .nav-link,
  .top-link {
    display: flex;
    justify-content: center;
  }

  .container-fluid {
    padding: 0 !important;
  }

  #logo-link {
    z-index: 2 !important;
  }

  #logo {
    width: 100px;
  }

  .info {
    padding: 0;
    font-size: 0.95rem !important;
  }

  .navbar-light .navbar-brand {
    z-index: 3 !important;
  }

  .show-nav {
    top: 0;
    padding-top: 78px;
    background-color: #f8be2a;
    width: 100%;
    position: absolute;
    left: 0;
  }

  .navbar-light .navbar-toggler {
    color: rgba(0, 0, 0, 1);
    border: none;
    z-index: 1 !important;
  }

  .navbar-light .navbar-nav .nav-link {
    color: #111 !important;
    padding: 20px 0;
  }

  .navbar-light .navbar-nav .nav-link.active {
    color: #fff !important;
  }

  .top-btn {
    background-color: #111 !important;
    color: #f8be2a !important;
    border-color: #111 !important;
  }

  h1 {
    font-size: 3rem !important;
  }

  h2 {
    font-size: 1.6rem !important;
  }

  h3 {
    font-size: 1.5rem !important;
  }

  p {
    font-size: 1rem !important;
  }
}

@media only screen and (max-width: 640px) {
  .bottom-details {
    margin-bottom: 20px;
  }

  .footer {
    padding-top: 30px !important;
  }
}

